# ZephyrDemoEsp32

./: .clang-format  .gitignore  CMakeLists.txt  README.rst  prj.conf  west.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt  prj.conf  west.yml
app/src/: main.c  threads_config.h
app/src/console/: cli_handler.c  cli_handler.h  uart_console.c  uart_console.h  uart_console_thread.c  uart_console_thread.h
app/src/drivers/: led_color.c  led_color.h
boards/: esp32c3_devkitm.overlay
src/: main.c  threads_config.h
src/console/: cli.c  cli_handler.c  uart_console.c  uart_console.h  uart_console_thread.c  uart_console_thread.h
src/drivers/: led_color.c  led_color.h
src/log/: logger.h
src/utils/: led_color.c  led_color.h
